src/tests/snapshots/mu__tests__object_load_field__nested_opt.snap
---
source: src/tests/object_load_field.rs
expression: snapshot
---
# Input:
class T:
  b = 0
class U:
  a = T()
v := U(a=T(b=10))
print ?v.a.b


# Result (success):
none

# Stdout:
10


