src/tests/snapshots/mu__tests__object_load_field__unknown.snap
---
source: src/tests/object_load_field.rs
expression: snapshot
---
# Input:
class T: pass
v := T()
print v.a


# Result (error):
In code at 0..0
Error: cannot get field `a` on value `<class "T">`


# Stdout:


